# mlflow-tutorial

./: .gitignore  README.md
MLFlow Server/: pyproject.toml  requirements.txt
Model Churn/: predict.ipynb  pyproject.toml  requirements.txt  train.ipynb
